workshop/petclinic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway 
spec:
  rules:
    - host: 18.201.219.33 
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: spring-petclinic-api-gateway 
                port:
                  number: 81
